--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,53 @@ ul {
   padding-right: 15px;
 }
 
+@media screen and (max-width: 320px) {
+  .container {
+    max-width: 320px;
+  }
+}
+
+@media (max-width: 990px) {
+  .navigation {
+    display: block;
+  }
+  /* Common parent container for header-list and adress-ul */
+  .mobile-menu {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    width: 320px;
+    height: 640px;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+  }
+  /* header */
+  .header-list {
+    width: 100%;
+    height: 50%;
+    background: #eaeaea; /* Example background color */
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 15px; /* Example padding */
+  }
+  /* adress */
+  .adress-ul {
+    width: 100%;
+    height: 50%;
+    background: #f5f5f5; /* Example background color */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 15px; /* Example padding */
+  }
+
+  .list-item {
+    display: table-column;
+  }
+}
+
 .header-list {
   list-style: none;
 }
@@ -275,7 +322,7 @@ svg {
 }
 
 .section-list-item {
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
 }
 
 .section-list-item h3 {
@@ -321,7 +368,8 @@ svg {
 
 .list-container {
   background-color: #ffffff;
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
+
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -427,7 +475,7 @@ svg {
 }
 
 .start-apps {
-  width: calc((100% - 48px) / 3); /* Змінено з 3 на 2 */
+  /* width: calc((100% - 48px) / 3);  Змінено з 3 на 2 */
   margin-bottom: 24px; /* Додано для збереження відстані між елементами */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
