--- a/css/styles.css
+++ b/css/styles.css
@@ -122,8 +122,9 @@ ul {
   .header-list {
     display: none;
   }
+
   .address {
-    display: none;
+    display: none !important; /* or any other styles you want to apply */
   }
 }
 
@@ -179,6 +180,7 @@ nav ul {
 }
 /*  */
 .address {
+  display: flex;
   gap: 40px;
   justify-content: space-between;
 }
@@ -236,6 +238,7 @@ nav ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 9999;
 }
 
 @media (max-width: 320px) {
@@ -243,12 +246,38 @@ nav ul {
     margin: 0 auto;
     max-width: 600px; /* Adjust the maximum width for larger screens */
   }
+
+  .menu-open-btn {
+    display: flex;
+  }
 }
 .menu-open-btn {
+  display: flex;
+  padding: 16px 0;
+  line-height: 0;
+  background-color: transparent;
+  border: none;
+  margin-left: 0 auto;
 }
 .menu-close-btn {
   display: block;
   margin-left: auto;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-button {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-button {
@@ -274,7 +303,6 @@ nav ul {
   letter-spacing: 0.72px;
   text-transform: capitalize;
   text-decoration-line: none;
-  padding: 40px;
 }
 .mob-address {
 }
@@ -327,6 +355,9 @@ nav ul {
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
+  .section-title {
+    max-width: 288px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1157px) {
@@ -619,6 +650,9 @@ nav ul {
   }
 
   .container_full {
+    flex-direction: column;
+  }
+  .new {
     flex-direction: column;
   }
 }
