--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #ffffff;
-}
-body,
-html {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -31,13 +34,6 @@ html {
   width: 100%;
   background-color: #404bbf;
   border-radius: 2px;
-}
-
-.header {
-  display: grid;
-  grid-template-columns: 1fr minmax(auto, 1158px) 1fr;
-  gap: 0 15px;
-  margin: 0 auto;
 }
 
 li {
@@ -68,6 +64,36 @@ ul {
   margin: 0 auto;
   padding: 0 15px 0 15px;
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .container {
+    max-width: 320px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1157px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media (max-width: 320px) {
+  #menu {
+    display: block;
+  }
+}
+
+.header-list {
+  list-style: none;
+}
+
+.container-header {
+  display: flex;
+  justify-content: space-around;
+  box-sizing: border-box;
+  margin: 0;
+}
+
 @media (min-width: 320px) and (max-width: 767px) {
   .container {
     max-width: 320px;
@@ -87,6 +113,11 @@ ul {
 
 .header-list {
   list-style: none;
+}
+.div-open-btn .container-header {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
@@ -644,16 +675,12 @@ nav ul {
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
-  .porfolio-position {
-    flex-direction: column;
-    position: relative;
-  }
-
   .container_full {
+    margin: 0 auto;
+    display: flex;
     flex-direction: column;
-  }
-  .new {
-    flex-direction: column;
+    align-items: center; /* Example: Center items horizontally */
+    justify-content: flex-start; /* Example: Align items at the start */
   }
 }
 @media (min-width: 768px) and (max-width: 1157px) {
