--- a/css/styles.css
+++ b/css/styles.css
@@ -275,14 +275,22 @@ nav ul {
   .menu-open-btn {
   }
 }
+
 .menu-open-btn {
-  display: flex;
+  display: block;
   padding: 16px 0;
   line-height: 0;
   background-color: transparent;
   border: none;
   margin-left: 0 auto;
 }
+
+@media screen and (min-width: 768px) {
+  .menu-open-btn {
+    display: none;
+  }
+}
+
 .menu-close-btn {
   display: block;
   margin-left: auto;
@@ -379,9 +387,6 @@ nav ul {
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
-  .section-title {
-    max-width: 288px;
-  }
 }
 
 @media (min-width: 768px) and (max-width: 1157px) {
@@ -453,7 +458,7 @@ nav ul {
     align-items: center;
     gap: 8px;
   }
-  .section-list-item-title {
+  .section-list-item-title-header {
     width: 288px;
     flex-direction: column;
     align-items: center;
@@ -562,6 +567,16 @@ nav ul {
     justify-content: center;
     align-items: center;
     gap: 32px;
+  }
+
+  .header-section {
+    color: var(--NAVY-BLUE, #2e2f42);
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.045em;
+    text-transform: capitalize;
   }
 }
 @media (min-width: 768px) and (max-width: 1157px) {
@@ -769,16 +784,17 @@ nav ul {
 }
 /* Footer */
 .container_full {
-  max-width: 1158px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
   display: flex;
   align-items: baseline;
   margin: 0 auto;
 }
 
+.container_wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 72px;
+}
 .title-footer {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
@@ -801,9 +817,6 @@ nav ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   box-sizing: border-box;
-}
-.container_wrapper {
-  margin-right: 120px;
 }
 
 .footer {
@@ -878,19 +891,28 @@ nav ul {
 }
 
 .custom-paragraph-class {
-  margin-bottom: 16px;
-  font-weight: 500;
+  color: var(--WHITE, #fff);
+
   font-size: 16px;
-  line-height: 1.5;
+
+  font-weight: 500;
+  line-height: 24px;
   letter-spacing: 0.02em;
-  color: #ffffff;
+  margin-bottom: 16px;
+}
+
+.my-label {
+  border-radius: 4px;
+  border: 1px solid var(--WHITE, #fff);
+  opacity: 0.3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer {
     padding: 96px 0;
   }
-  .container-footer {
+  .container-full {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -961,7 +983,6 @@ nav ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #ffffff;
-  margin-left: 80px;
 }
 
 .my-input::placeholder {
@@ -976,7 +997,6 @@ nav ul {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  gap: 16px;
   border-radius: 4px;
   background-color: #4d5ae5;
   color: #ffffff;
@@ -992,6 +1012,7 @@ nav ul {
   height: 24px;
   order: 2;
   margin-left: 16px;
+  fill: #f4f4fd;
 }
 
 /* New-section */
