--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ ul {
   padding: 0 15px 0 15px;
 }
 
+/* Remove redundant/duplicate media queries */
 @media (min-width: 320px) and (max-width: 767px) {
   .container {
     max-width: 320px;
@@ -88,15 +89,8 @@ ul {
   list-style: none;
 }
 
+/* Remove redundant/duplicate media queries */
 @media (min-width: 320px) and (max-width: 767px) {
-  .container {
-    max-width: 320px;
-  }
-}
-@media (min-width: 768px) and (max-width: 1157px) {
-  .container {
-    width: 768px;
-  }
 }
 
 @media (max-width: 320px) {
@@ -108,6 +102,7 @@ ul {
 .header-list {
   list-style: none;
 }
+
 .container-header {
   display: flex;
   justify-content: space-between;
@@ -115,6 +110,7 @@ ul {
   margin: 0 auto;
 }
 
+/* Remove empty media queries */
 @media (min-width: 320px) and (max-width: 767px) {
 }
 
@@ -134,7 +130,7 @@ ul {
 }
 
 .logo-studio {
-  color: var(--NAVY-BLUE, #2e2f42);
+  color: #2e2f42;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -155,6 +151,17 @@ ul {
 }
 
 @media (min-width: 768px) and (max-width: 1157px) {
+  .address {
+    margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    white-space: pre-line;
+  }
 }
 
 .navigation {
@@ -172,9 +179,10 @@ ul {
 }
 
 nav ul li a {
-  transform: uppercase;
+  text-transform: uppercase;
 }
-/*  */
+
+/* Media query for screens with a maximum width of 320px */
 @media (max-width: 320px) {
   .checkbtn {
     width: 24px;
@@ -183,6 +191,7 @@ nav ul li a {
   }
 }
 
+/* Styles for navigation links */
 nav ul {
   display: flex;
   gap: 40px;
@@ -204,14 +213,15 @@ nav ul {
 .nav-link:focus {
   color: #404bbf;
 }
-/*  */
+
+/* Styles for the address section */
 .address {
   display: flex;
   gap: 40px;
   justify-content: space-between;
 }
 
-.adress_link {
+.address_link {
   color: #434455;
   font-size: 16px;
   line-height: 1.5;
@@ -222,14 +232,15 @@ nav ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.adress-ul {
+.address-ul {
   list-style: none;
 }
 
-.adress_link:hover {
+.address_link:hover {
   color: #404bbf;
 }
-.adress_link:focus {
+
+.address_link:focus {
   color: #404bbf;
 }
 
@@ -244,6 +255,7 @@ nav ul {
   font-style: normal;
 }
 
+/* Styles for the address wrap-add on hover and focus */
 .address-wrap-add:hover,
 .address-wrap-add:focus {
   color: #404bbf;
@@ -528,7 +540,23 @@ nav ul {
 }
 
 @media (min-width: 768px) and (max-width: 1157px) {
+  .list-item {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .section-list-gap {
+    display: flex;
+    width: calc((100% - 72px) / 4);
+    flex-direction: rowW;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 }
+/* ? */
+
 /* Section-2 */
 .information_section {
   padding: 120px 0;
@@ -724,7 +752,24 @@ nav ul {
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
 }
-@media screen and (min-width: 768px) and (max-width: 1157px) {
+@media (min-width: 768px) and (max-width: 1157px) {
+  .portfolio-section {
+    padding: 96px 0;
+  }
+
+  .portfolio-position {
+    display: flex;
+    flex-direction: column;
+    gap: 48px 24px;
+  }
+
+  .div-img {
+    width: calc((100% - 24px) / 2);
+    width: 356px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 /* Section 4 */
 .portfolio-section {
@@ -821,7 +866,24 @@ nav ul {
 @media screen and (min-width: 320px) and (max-width: 767px) {
 }
 @media screen and (min-width: 768px) and (max-width: 1157px) {
+  .text-footer {
+    gap: 24px;
+  }
+
+  .title-footer {
+    padding-right: 0;
+  }
+
+  .container-full {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 24px;
+
+    max-width: 530px;
+  }
 }
+
 /* Footer */
 .container_full {
   display: flex;
@@ -985,7 +1047,6 @@ nav ul {
     align-items: center;
   }
   .custom-paragraph-class {
-    display: block;
     text-align: center;
   }
 
@@ -997,8 +1058,7 @@ nav ul {
     align-items: center;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1157px) {
-}
+
 /*  */
 
 .container-footer {
