--- a/css/styles.css
+++ b/css/styles.css
@@ -463,6 +463,7 @@ nav ul {
     }
   }
 }
+/* ? */
 .section_wrap .section-button-wrap {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -774,18 +775,15 @@ nav ul {
 /* Section 4 */
 .portfolio-section {
   background: #fff;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding: 120px 0;
 }
 
 .portfolio_header {
   color: #2e2f42;
   text-align: center;
-  font-family: Roboto;
   font-size: 36px;
   font-weight: 700;
-  line-height: 1.1111;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.72px;
   text-transform: capitalize;
   margin-bottom: 72px;
 }
@@ -793,19 +791,21 @@ nav ul {
 .porfolio-position {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  list-style: none;
-}
+  gap: 48px 24px;
+  margin: 0;
+  padding: 0;
 
-.start-apps:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  gap: 48px 24px;
 }
 
 .start-apps {
-  /* width: calc((100% - 48px) / 3);  */
-  margin-bottom: 24px; /* Додано для збереження відстані між елементами */
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.start-apps:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .div-img {
@@ -828,7 +828,7 @@ nav ul {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.start-apps:hover p {
+.start-apps:hover .paragraf {
   transform: translateY(0%);
 }
 
@@ -845,50 +845,67 @@ nav ul {
 
 .start_app_header {
   color: #2e2f42;
-  font-family: Roboto;
   font-size: 20px;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  margin: 8px 0;
+  margin-bottom: 8px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .p_header {
   color: #434455;
-  font-family: Roboto;
   font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.32px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
-}
-@media screen and (min-width: 768px) and (max-width: 1157px) {
-  .text-footer {
-    gap: 24px;
+  .portfolio-section {
+    padding: 96px 0;
   }
 
-  .title-footer {
-    padding-right: 0;
-  }
-
-  .container-full {
+  .porfolio-position {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+  }
 
-    max-width: 530px;
+  .start-apps {
+    width: 288px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .portfolio-section {
+    padding: 96px 0;
+  }
+
+  .porfolio-position {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 48px 24px;
+  }
+
+  .start-apps {
+    width: calc((100% - 24px) / 2);
+    width: 356px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
 /* Footer */
-.container_full {
+.container-full {
   display: flex;
-  align-items: baseline;
-  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  gap: 72px;
 }
 
 .container_wrapper {
@@ -1015,10 +1032,9 @@ nav ul {
     padding: 96px 0;
   }
   .container-full {
-    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    gap: 24px;
   }
   .container_wrapper {
     display: flex;
@@ -1047,6 +1063,7 @@ nav ul {
     align-items: center;
   }
   .custom-paragraph-class {
+    display: block;
     text-align: center;
   }
 
