--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  color: #434455;
+  background-color: #ffffff;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 .header {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -59,39 +74,6 @@ ul {
   padding-right: 15px;
 }
 
-/* Remove redundant/duplicate media queries */
-@media (min-width: 320px) and (max-width: 767px) {
-  .container {
-    max-width: 320px;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1157px) {
-  .container {
-    width: 768px;
-  }
-}
-
-@media (max-width: 320px) {
-  #menu {
-    display: block;
-  }
-}
-
-.header-list {
-  list-style: none;
-}
-
-/* Remove redundant/duplicate media queries */
-@media (min-width: 320px) and (max-width: 767px) {
-}
-
-@media (max-width: 320px) {
-  #menu {
-    display: block;
-  }
-}
-
 .header-list {
   list-style: none;
 }
@@ -119,49 +101,9 @@ ul {
   text-decoration: none;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .header-list {
-    display: none;
-  }
-
-  .address {
-    display: none !important; /* or any other styles you want to apply */
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1157px) {
-}
-
 .navigation {
   display: flex;
   align-items: center;
-}
-
-.checkbtn {
-  width: 24px;
-  height: 24px;
-  flex-shrink: 0;
-}
-
-#check {
-  display: none;
-}
-
-nav ul li a {
-  text-transform: uppercase;
-}
-
-/* Media query for screens with a maximum width of 320px */
-@media (max-width: 320px) {
-  .checkbtn {
-    width: 24px;
-    height: 24px;
-    flex-shrink: 0;
-  }
-}
-.menu-open-btn {
-  display: block;
-  margin-left: auto;
 }
 
 nav ul {
@@ -171,7 +113,7 @@ nav ul {
 
 .nav-link {
   color: var(--NAVY-BLUE, #2e2f42);
-
+  font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -185,7 +127,6 @@ nav ul {
 .nav-link:focus {
   color: #404bbf;
 }
-
 .address {
   font-style: normal;
   gap: 40px;
@@ -229,6 +170,18 @@ nav ul {
 .address-wrap-add:focus {
   color: #404bbf;
 }
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header-list {
+    display: none;
+  }
+
+  .address {
+    display: none !important; /* or any other styles you want to apply */
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1157px) {
+}
 
 /* menu-section */
 .mob-menu {
@@ -248,6 +201,23 @@ nav ul {
 }
 
 @media (max-width: 320px) {
+  .checkbtn {
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
+  }
+}
+.menu-open-btn {
+  display: block;
+  margin-left: auto;
+}
+
+nav ul {
+  display: flex;
+  gap: 40px;
+}
+
+@media (max-width: 320px) {
   .mob-menu {
     margin: 0 auto;
     max-width: 600px; /* Adjust the maximum width for larger screens */
@@ -264,6 +234,16 @@ nav ul {
   background-color: transparent;
   border: none;
   margin-left: 0 auto;
+}
+
+.checkbtn {
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
+}
+
+#check {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -525,7 +505,7 @@ nav ul {
   .section-list-gap {
     display: flex;
     width: calc((100% - 72px) / 4);
-    flex-direction: rowW;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
   }
