--- a/css/styles.css
+++ b/css/styles.css
@@ -36,12 +36,8 @@ body {
   border-radius: 2px;
 }
 
-.header > div {
-  display: flex;
-  justify-content: space-between;
-  max-width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
+.logo-studio {
+  margin-right: auto;
 }
 
 li {
@@ -72,6 +68,11 @@ ul {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.container-header {
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-list {
@@ -129,6 +130,7 @@ nav ul {
 }
 .address {
   font-style: normal;
+  display: flex;
   gap: 40px;
   justify-content: space-between;
 }
@@ -233,7 +235,7 @@ nav ul {
   line-height: 0;
   background-color: transparent;
   border: none;
-  margin-left: 0 auto;
+  margin-left: auto;
 }
 
 .checkbtn {
