--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,12 @@ body {
 }
 
 .header {
+  background: #fff;
+  display: flex;
   border-bottom: 1px solid #e7e9fc;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .header-list li:first-child a {
@@ -76,7 +79,8 @@ ul {
 }
 
 .header-list {
-  list-style: none;
+  display: flex;
+  gap: 40px;
 }
 
 .title {
@@ -135,15 +139,15 @@ nav ul {
 }
 
 .nav-link {
-  color: var(--NAVY-BLUE, #2e2f42);
-  font-family: Roboto;
+  position: relative;
+  padding: 24px 0;
+  color: #2e2f42;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+  line-height: 24px;
+  letter-spacing: 0.32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   text-decoration: none;
-  padding: 24px 0;
-  display: block;
 }
 
 .nav-link:hover,
@@ -152,10 +156,12 @@ nav ul {
 }
 
 .address {
-  font-style: normal;
   display: flex;
-  gap: 40px;
-  justify-content: space-between;
+  letter-spacing: 0.32px;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 24px;
+  padding-left: 332px;
 }
 
 .adress_link {
@@ -199,6 +205,10 @@ nav ul {
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header-list {
     display: none;
+  }
+
+  .title {
+    margin-right: 151px;
   }
 
   .address {
@@ -314,6 +324,19 @@ nav ul {
   display: inline-flex;
 }
 
+.mob-navigation li:first-child a {
+  position: relative;
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2);
+}
+
+.mob-navigation:hover {
+  color: #404bbf;
+}
+.mob-navigation:focus {
+  color: #404bbf;
+}
+
 .div-mod {
 }
 .mob-list {
@@ -338,17 +361,29 @@ nav ul {
   align-items: flex-start;
   gap: 40px;
 }
-.mob-adress-link {
-  color: var(--IRIS, #4d5ae5);
 
-  /* Header 3 */
+.mob-adress-link {
+  color: var(--NAVY-BLUE, #2e2f42);
   font-size: 20px;
   font-weight: 500;
-  line-height: 24px; /* 120% */
+  line-height: 24px;
   letter-spacing: 0.4px;
   text-decoration-line: none;
   padding-top: 169px;
+  font-style: normal;
 }
+
+.mob-adress-ul li:first-child a {
+  position: relative;
+  color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2);
+}
+
+.mob-adress-ul li:first-child a:hover,
+.mob-adress-ul li:first-child a:focus {
+  color: #404bbf;
+}
+
 .mob-social-media-list {
   display: flex;
   gap: 24px;
@@ -1205,8 +1240,7 @@ svg {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 408px;
-  min-height: 584px;
+
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1262,8 +1296,21 @@ svg:focus {
 }
 
 .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  width: 288px;
+  min-height: 623px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
 }
+
+/*  */
 
 .modal-content {
   font-weight: 500;
@@ -1422,15 +1469,16 @@ svg:focus {
 }
 
 /* phone */
-@media (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .modal {
     width: 288px;
     height: 623px;
     flex-shrink: 0;
+    border-radius: 4px;
   }
 }
 /* tablet */
-@media (min-width: 768px) and (max-width: 1157px) {
+@media screen and (min-width: 768px) {
   .modal {
     width: 408px;
     min-height: 584px;
