--- a/css/styles.css
+++ b/css/styles.css
@@ -474,7 +474,7 @@ nav ul {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/people-office@2x.jpg);
+      url(../images/people-office.jpg);
   }
 }
 
@@ -488,7 +488,7 @@ nav ul {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/people-office.jpg);
+      url(../images/people-office@1x.jpg);
     background-size: cover;
     background-position: center;
   }
@@ -569,6 +569,34 @@ nav ul {
 .section-button-wrap:hover,
 .section-button-wrap:focus {
   background-color: #404bbf;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+  .section-title {
+    font-family: "Roboto", sans-serif;
+    font-size: 36px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    font-weight: 700;
+    color: #ffffff;
+    max-width: 216px;
+    margin-bottom: 48px;
+  }
+}
+/* tablet */
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .section-title {
+    font-family: "Roboto", sans-serif;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    font-weight: 700;
+    color: #ffffff;
+    max-width: 496px;
+    margin-bottom: 48px;
+  }
 }
 
 /* Section-2 */
@@ -716,7 +744,7 @@ svg {
 /* Section 3 */
 .section {
   background-color: #f4f4fd;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .header-section {
@@ -816,16 +844,16 @@ svg {
 
 /* phone */
 @media (min-width: 320px) and (max-width: 767px) {
+  .div-section-container {
+    width: 296px;
+  }
+
   .list-item {
     display: flex;
     flex-direction: column;
     gap: 74px;
   }
   .list-container {
-    margin: 0 auto;
-    display: flex;
-    width: 264px;
-    padding-bottom: 32px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -860,7 +888,7 @@ svg {
 /* Section 4 */
 .portfolio-section {
   background: #fff;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 
 .portfolio_header {
@@ -1101,9 +1129,7 @@ svg {
   }
   .container-full {
     flex-direction: column;
-
     justify-content: center;
-    gap: 24px;
   }
   .container_wrapper {
     display: flex;
@@ -1125,7 +1151,6 @@ svg {
     text-align: center;
   }
   .new {
-    margin-top: 72px;
     padding-left: 0;
     display: flex;
     flex-direction: column;
@@ -1156,7 +1181,7 @@ svg {
     align-items: baseline;
     row-gap: 72px;
     column-gap: 24px;
-    padding-left: 108px;
+    width: 584px;
   }
 
   .title-footer {
